--- a/assets/css/backend.css
+++ b/assets/css/backend.css
@@ -3,6 +3,10 @@
   padding: 40px;
   border-radius: 5px;
   background: white; }
+  .acotrs_test_class1I3nr .acotrs_form_froup3iR5b {
+    margin-bottom: 10px; }
+    .acotrs_test_class1I3nr .acotrs_form_froup3iR5b select {
+      width: 100%; }
   .acotrs_test_class1I3nr .acotrs_uploader1mT9G {
     margin-top: 10px;
     margin-bottom: 10px; }
