--- a/app/src/backend.scss
+++ b/app/src/backend.scss
@@ -1,5 +1,5 @@
-:global(#apifw_ui_root) {
-  //@import 'reset';
+:global(#masterstudy_ui_root) {
+  position: relative;
   * {
     box-sizing: border-box;
   }
@@ -7,4 +7,15 @@
   padding-right: 10px;
   max-width: 1200px;
 
+}
+
+.loader {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  background-color: #ffffff5e;
 }
