--- a/assets/css/backend.css
+++ b/assets/css/backend.css
@@ -1,110 +1,8 @@
-.acotrs_test_class1I3nr {
-  width: 100%;
-  padding: 40px;
-  border-radius: 5px;
-  display: flex;
-  background: white; }
-  .acotrs_test_class1I3nr > div {
-    flex: 1; }
-  .acotrs_test_class1I3nr .acotrs_right_inner1YCfh a {
-    display: block;
-    text-decoration: none;
-    padding: 10px;
-    margin: 13px 0;
-    border: 1px solid #5b9dd9;
-    max-width: 300px;
-    border-radius: 5px;
-    color: black;
-    text-align: center; }
-  .acotrs_test_class1I3nr .acotrs_right_inner1YCfh a:hover {
-    color: white;
-    background-color: #5b9dd9; }
-  .acotrs_test_class1I3nr .acotrs_form_froup3iR5b {
-    margin-bottom: 10px; }
-    .acotrs_test_class1I3nr .acotrs_form_froup3iR5b select {
-      width: 100%; }
-  .acotrs_test_class1I3nr .acotrs_msgS1rRcZ {
-    color: #5b9dd9;
-    padding: 10px 0; }
-  .acotrs_test_class1I3nr .acotrs_uploader1mT9G {
-    margin-top: 10px;
-    margin-bottom: 10px; }
-    .acotrs_test_class1I3nr .acotrs_uploader1mT9G input {
-      border: 1px solid #5b9dd9;
-      border-radius: 5px;
-      padding: 10px; }
-  .acotrs_test_class1I3nr button {
-    border-width: 0;
-    background-color: #00a0d2;
-    border-radius: 5px;
-    padding: 10px 20px;
-    color: white;
-    cursor: pointer; }
+.acotrs_test_class1I3nr{width:100%;padding:40px;border-radius:5px;display:flex;background:white}.acotrs_test_class1I3nr>div{flex:1}.acotrs_test_class1I3nr .acotrs_right_inner1YCfh a{display:block;text-decoration:none;padding:10px;margin:13px 0;border:1px solid #5b9dd9;max-width:300px;border-radius:5px;color:black;text-align:center}.acotrs_test_class1I3nr .acotrs_right_inner1YCfh a:hover{color:white;background-color:#5b9dd9}.acotrs_test_class1I3nr .acotrs_form_froup3iR5b{margin-bottom:10px}.acotrs_test_class1I3nr .acotrs_form_froup3iR5b select{width:100%}.acotrs_test_class1I3nr .acotrs_msgS1rRcZ{color:#5b9dd9;padding:10px 0}.acotrs_test_class1I3nr .acotrs_uploader1mT9G{margin-top:10px;margin-bottom:10px}.acotrs_test_class1I3nr .acotrs_uploader1mT9G input{border:1px solid #5b9dd9;border-radius:5px;padding:10px}.acotrs_test_class1I3nr button{border-width:0;background-color:#00a0d2;border-radius:5px;padding:10px 20px;color:white;cursor:pointer}
 
-.acotrs_form_groupKjEn2 {
-  display: flex;
-  align-items: center; }
-  .acotrs_form_groupKjEn2 label {
-    flex: 0 0 40%; }
-  .acotrs_form_groupKjEn2 input[type="text"], .acotrs_form_groupKjEn2 input[type="number"], .acotrs_form_groupKjEn2 input[type="email"], .acotrs_form_groupKjEn2 textarea {
-    flex: 0 0 100%;
-    max-width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
-    background: #FAFCFF;
-    border: 1px solid rgba(0, 0, 0, 0.15);
-    border-radius: 3px;
-    font-weight: normal;
-    font-size: 13px;
-    line-height: 18px;
-    color: #1B2733; }
-    .acotrs_form_groupKjEn2 input[type="text"]:focus, .acotrs_form_groupKjEn2 input[type="number"]:focus, .acotrs_form_groupKjEn2 input[type="email"]:focus, .acotrs_form_groupKjEn2 textarea:focus {
-      border-color: #006AFF;
-      box-shadow: none;
-      outline: none; }
-  .acotrs_form_groupKjEn2 label + input[type="text"], .acotrs_form_groupKjEn2 label + textarea, .acotrs_form_groupKjEn2 label + input[type="number"], .acotrs_form_groupKjEn2 label + input[type="email"] {
-    flex: 0 0 42.61%; }
-  .acotrs_form_groupKjEn2 input[type="text"], .acotrs_form_groupKjEn2 input[type="number"], .acotrs_form_groupKjEn2 input[type="email"] {
-    height: 40px; }
-  .acotrs_form_groupKjEn2 textarea {
-    height: 94px;
-    padding-top: 15px;
-    padding-bottom: 15px; }
+.acotrs_form_groupKjEn2{display:flex;align-items:center}.acotrs_form_groupKjEn2 label{flex:0 0 40%}.acotrs_form_groupKjEn2 input[type="text"],.acotrs_form_groupKjEn2 input[type="number"],.acotrs_form_groupKjEn2 input[type="email"],.acotrs_form_groupKjEn2 textarea{flex:0 0 100%;max-width:100%;padding-left:15px;padding-right:15px;background:#FAFCFF;border:1px solid rgba(0,0,0,0.15);border-radius:3px;font-weight:normal;font-size:13px;line-height:18px;color:#1B2733}.acotrs_form_groupKjEn2 input[type="text"]:focus,.acotrs_form_groupKjEn2 input[type="number"]:focus,.acotrs_form_groupKjEn2 input[type="email"]:focus,.acotrs_form_groupKjEn2 textarea:focus{border-color:#006AFF;box-shadow:none;outline:none}.acotrs_form_groupKjEn2 label+input[type="text"],.acotrs_form_groupKjEn2 label+textarea,.acotrs_form_groupKjEn2 label+input[type="number"],.acotrs_form_groupKjEn2 label+input[type="email"]{flex:0 0 42.61%}.acotrs_form_groupKjEn2 input[type="text"],.acotrs_form_groupKjEn2 input[type="number"],.acotrs_form_groupKjEn2 input[type="email"]{height:40px}.acotrs_form_groupKjEn2 textarea{height:94px;padding-top:15px;padding-bottom:15px}
 
-.acotrs_active2UBE8 {
-  color: red; }
+.acotrs_active2UBE8{color:red}.acotrs_wrapohVov ul{margin:0}.acotrs_wrapohVov ul li{display:inline-block;margin:6px;margin-bottom:0;margin-left:0}.acotrs_wrapohVov ul li a{text-decoration:none;padding:20px;line-height:0;border-radius:5px 5px 0px 0px;display:inline-block;background-color:white}
 
-.acotrs_wrapohVov ul {
-  margin: 0; }
-  .acotrs_wrapohVov ul li {
-    display: inline-block;
-    margin: 6px;
-    margin-bottom: 0;
-    margin-left: 0; }
-    .acotrs_wrapohVov ul li a {
-      text-decoration: none;
-      padding: 20px;
-      line-height: 0;
-      border-radius: 5px 5px 0px 0px;
-      display: inline-block;
-      background-color: white; }
+#masterstudy_ui_root{position:relative;padding-right:10px;max-width:1200px}#masterstudy_ui_root *{box-sizing:border-box}.acotrs_loaderGqLiV{position:absolute;width:100%;display:flex;height:100%;justify-content:center;justify-items:center;align-items:center;background-color:#ffffff5e}
 
-#masterstudy_ui_root {
-  position: relative;
-  padding-right: 10px;
-  max-width: 1200px; }
-  #masterstudy_ui_root * {
-    box-sizing: border-box; }
-
-.acotrs_loaderGqLiV {
-  position: absolute;
-  width: 100%;
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  justify-items: center;
-  align-items: center;
-  background-color: #ffffff5e; }
-
-
-/*# sourceMappingURL=backend.css.map*/
